fix tooltip width on mobile for tabs

--- a/src/components/common/Hero/Hero.module.css
+++ b/src/components/common/Hero/Hero.module.css
@@ -34,9 +34,9 @@
   margin-top: 180px;
   padding: 20px;
   z-index: 1;
-  width: 60%;
+  width: 70%;
   color: var(--purple-1);
-  background: var(--white);
+  background: rgba(255, 255, 255, 0.9);
   margin-left: -20px;
   border: 6px outset var(--purple-2);
   border-radius: 3px;
